p elements no longer overflow

--- a/style.css
+++ b/style.css
@@ -11,12 +11,14 @@ body {
   color: green;
   background-color: rgba(0, 0, 0, 0.8);
   margin: .5em;
+  overflow: none;
+  min-height: 500px;
+  max-height: 800px;
+  display: block;
 }
 
 .konsole-tekst {
   margin: .5em;
-  min-height: 500px;
-  max-height: 800px;
-  overflow-y: auto;
-  display: block;
+  overflow-y: scroll;
+  height: 450px;
 }
